[package]
name = "turm_gpu"
version = "0.1.0"
authors = ["Jiwan Chung <jiwan.chung.research@gmail.com>"]
edition = "2021"
description = "turm_gpu is a rust-based TUI for inspecting GPU resources in a slurm enviroment."
license = "MIT"

[lib]
name = "turm_gpu"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.19.0"
crossterm = "0.25.0"
pyo3 = "0.22.0"
